# HackaTum2024

./: CMakeLists.txt  README.md  lexer.h  main.cpp  parser.h  test.txt  transpiler.cpp  transpiler.h
